# desknow

./: .gitignore  .mcp.json  .npmrc  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
_bmad/: config.toml
apps/api/: .env.example  .railwayignore  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 124a50c37b8c_baseline_enable_pgvector_extension.py  181925e12bb8_create_favorites_table.py  191d9c7dab2d_create_users_table.py  7a6edff2b9ef_create_document_chunks_table.py  a7c9e1b3d5f2_create_notifications_table.py  ac9b81f7d058_create_refresh_tokens_table.py  b2c4f1a9d3e7_add_rooms_user_constraints.py  b8f2c4a6d9e3_create_reviews_table.py  c9d3e5b7f1a4_create_review_replies_table.py  d8afe1726e81_create_reservations_tables.py  e3dbb470902f_create_rooms_business_hours_holiday_.py  f1a2b3c4d5e6_add_reservations_slot_starts_snapshot.py  f1ba2a78986a_add_rooms_address_column.py
apps/api/app/: main.py
apps/api/app/admin/: __init__.py  router.py  schemas.py  service.py
apps/api/app/auth/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/chatbot/: __init__.py  graph.py  models.py  prompts.py  retrieval.py  router.py  schemas.py  service.py  tools.py
apps/api/app/chatbot/ingest/: __init__.py  chunking.py  embedding.py  service.py  store.py
apps/api/app/chatbot/llm/: __init__.py  base.py  errors.py
apps/api/app/core/: config.py  db.py  errors.py  pagination.py  security.py  time.py
apps/api/app/favorites/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/notifications/: __init__.py  models.py  reminders.py  router.py  schemas.py  service.py
apps/api/app/reservations/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/reviews/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/rooms/: __init__.py  geo.py  models.py  regions.py  router.py  schemas.py  service.py
apps/api/docs_corpus/: README.md  service_guide.txt
apps/api/scripts/: export_openapi.py  ingest_docs.py  reset_all_passwords.py  seed_admin.py
apps/api/tests/: conftest.py  test_main.py  test_openapi_export.py
apps/api/tests/admin/: __init__.py  test_router.py  test_seed_admin.py  test_service.py
apps/api/tests/auth/: test_router.py  test_schemas.py  test_service.py
apps/api/tests/chatbot/: __init__.py  conftest.py  test_chatbot_router.py  test_chatbot_service.py  test_chatbot_stream.py  test_golden_set.py  test_ingest.py  test_ingest_integration.py  test_llm_adapter.py  test_models.py  test_rag_graph.py  test_reservation_tool.py  test_retrieval.py  test_tools.py
apps/api/tests/core/: keyset_fake.py  test_config.py  test_db.py  test_errors.py  test_pagination.py  test_security.py  test_time.py
apps/api/tests/favorites/: test_router.py  test_service.py
apps/api/tests/integration/: test_auth_migration.py  test_auth_session.py  test_migrations.py  test_reservations_concurrency.py  test_reservations_migration.py  test_rooms_migration.py
apps/api/tests/notifications/: test_models.py  test_reminders.py  test_router.py  test_service.py
apps/api/tests/reservations/: test_concurrency.py  test_models.py  test_router.py  test_service.py
apps/api/tests/reviews/: test_models.py  test_router.py  test_service.py
apps/api/tests/rooms/: test_geo.py  test_models.py  test_regions.py  test_router.py  test_schemas.py  test_service.py
(+427 files in other folders)
