[project]
name = "desknow-api"
version = "0.1.0"
description = "desknow 백엔드 API (Story 1.2 풀 스캐폴드 — FastAPI 셸 + 도메인 골격)"
readme = "README.md"
requires-python = ">=3.12"
# Story 1.2에서 풀 백엔드 의존성을 추가했다.
# 주의: sqlmodel/psycopg/pgvector는 Story 1.4(DB 연결·마이그레이션)가 사용한다.
#       1.2는 의존성만 설치하고 연결·마이그레이션 코드는 만들지 않는다.
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.0",
    # 멀티 LLM 어댑터 레이어(Story 7.1). LangChain v1의 init_chat_model이 세 프로바이더를
    # 단일 BaseChatModel로 통일한다 → "if 분기 금지"(architecture L299)를 통합 인터페이스로 충족.
    # langgraph(에이전트 그래프/checkpointer)는 7.3 범위이므로 여기 추가하지 않는다.
    "langchain>=1.3,<2",
    # langgraph(에이전트 그래프 + checkpointer): 챗봇 세션/멀티턴 대화의 코어(Story 7.3). MVP는
    # 인메모리 MemorySaver(langgraph 코어 포함)만 쓰므로 langgraph-checkpoint-postgres는 추가하지
    # 않는다(영속 PostgresSaver=배포/스케일 defer). 7.1은 langgraph를 의도적으로 제외했으나(venv에
    # 전이 설치만) 재현성·lock을 위해 7.3이 명시 선언한다. uv.lock 해석 실버전=langgraph 1.2.5.
    "langgraph>=1,<2",
    "langchain-openai>=1.3,<2",
    "langchain-anthropic>=1.4,<2",
    # langchain-google-genai는 독립 4.x 라인(langchain 1.x와 번호 다른 게 정상).
    "langchain-google-genai>=4.2,<5",
    # httpx: 카카오 지오코딩(Story 2.2 AC2)을 런타임에 호출한다 → dev 그룹이 아니라 런타임
    # 의존성으로 선언(누락 시 배포 런타임 ModuleNotFoundError). dev 그룹의 동일 핀은 TestClient용.
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.5",
    # pydantic[email]: EmailStr(가입 이메일 형식 검증, Story 1.7)는 email-validator가 없으면
    # import 시점에 ImportError. 명시적 런타임 의존성으로 고정한다(= email-validator + dnspython).
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
    # tzdata: zoneinfo.ZoneInfo("Asia/Seoul")가 읽는 IANA tz DB. Windows/슬림 컨테이너에는
    # 시스템 tz DB가 없어 미설치 시 ZoneInfoNotFoundError. core/time이 사용(Story 1.5).
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.49.0",
    # sse-starlette: 챗봇 응답 SSE 스트리밍(Story 7.4)의 EventSourceResponse — 프레이밍·keep-alive
    # ping·클라 disconnect 정리를 라이브러리로 처리하고, 토큰은 data: {json}로 흘려 \n·공백·[DONE]
    # 오염을 원천 차단한다(deferred-work L129 회수). uv.lock 해석 실버전=sse-starlette 3.4.4.
    "sse-starlette>=3.4.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── 린트/타입 게이트 (Story 1.2 — 1.1 리뷰 이월 항목 회수) ──
[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic 스캐폴드(env.py·script.py.mako·생성된 마이그레이션)는 프레임워크 생성물이라
# 린트 대상에서 제외한다(마이그레이션 생성 때마다의 불필요한 린트 churn 방지).
extend-exclude = ["alembic"]

[tool.ruff.lint]
# 기본(E,F) + import 정렬(I) + 버그 의심(B) + pyupgrade(UP). 합리적 기본 룰셋.
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 의존성 주입은 인자 기본값에서 Depends()/Security()를 호출하는 것이 표준 관용구다
# (Story 1.7 auth 라우터가 첫 사용 — 후속 라우터의 RBAC 의존성도 동일). B008(기본값 함수 호출
# 금지)의 예외로 등록한다 = FastAPI 공식 권장 ruff 설정.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
# 합리적 strict 수준: 정의는 타입 강제, 외부 라이브러리 누락 stub은 무시.
strict = true
ignore_missing_imports = true
# pydantic-settings의 env 기반 기본값을 mypy가 인지하도록 플러그인 활성화
# (없으면 Settings() 호출에 'Missing named argument' 오탐).
plugins = ["pydantic.mypy"]
